# JG-Treasury-Dashboard

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: buildnpush.yml
apps/container-ui/: CHANGELOG.md  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
apps/container-ui/public/auth/callback/: index.html
apps/container-ui/src/: App.test.tsx  App.tsx  main.tsx
apps/container-ui/src/common/: index.ts
apps/container-ui/src/common/components/: ProtectedRoute.tsx  RoleProtectedRoute.tsx  index.ts
apps/container-ui/src/common/config/: datadog.ts  environment.ts  index.ts  msalConfig.ts  roles.ts
apps/container-ui/src/common/contexts/: AuthContext.tsx  index.ts
apps/container-ui/src/common/hooks/: index.ts  useDatadog.ts
apps/container-ui/src/common/queries/: index.ts  queryClient.ts  (+1 more)
apps/container-ui/src/config/: environment.ts  msalConfig.ts
apps/container-ui/src/contexts/: ApiConfigContext.tsx  AuthContext.tsx
apps/container-ui/src/operations/: index.ts
apps/container-ui/src/queries/: index.ts  queryClient.test.ts  queryClient.ts  useHealth.ts
apps/container-ui/src/risk/: index.ts
apps/container-ui/src/test/: setup.ts
apps/container-ui/src/treasury/: index.ts
apps/container-ui/src/types/: api.ts
apps/container-ui/src/views/: index.ts  views.module.scss
apps/file-server/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/file-server/file_server/: __init__.py  config.py  main.py
apps/pnl/: index.html  package.json  tsconfig.json  vite.config.ts
(+37 files in other folders)
